--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "lint": "eslint lib test",
     "format": "prettier --write \"{lib,test}/**/*.js\"",
-    "test": "ava --require ./test/util/setup.js test/*.js",
+    "test": "ava --require babel-register --require ./test/util/setup.js test/*.js",
     "coverage": "nyc --reporter=lcov --reporter=html npm test",
     "readme": "markdown-toc README.md -i --no-firsth1 --maxdepth=1 --bullets=-",
     "release": "./bin/release-it.js"
